Code cleanup and README documenting